# otus_containers

./: CMakeLists.txt  linkedlist.cpp  main.cpp  sequential.cpp
headers/: list.h  serial.h
sources/: list.cpp  serial.cpp
test/: linkedlist_tests.cpp  sequential_tests.cpp
